--- a/Raj/class_work.ipynb
+++ b/Raj/class_work.ipynb
@@ -2,6 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.close()>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('abc.txt', 'w')\n",
+    "s = \"\"\"Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n",
+    "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n",
+    "It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n",
+    "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n",
+    "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. \n",
+    "The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. \n",
+    "Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. \n",
+    "Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n",
+    "\"\"\"\n",
+    "f.write(s)\n",
+    "f.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no of char in a file: 1195\n",
+      "no of words in a file: 194\n",
+      "no of lines: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get file details\n",
+    "f = open('abc.txt', 'r')\n",
+    "s = f.read()\n",
+    "print('no of char in a file:', len(s))\n",
+    "print('no of words in a file:', len(s.split(' ')))\n",
+    "f.seek(0)\n",
+    "print('no of lines:', len(f.readlines()))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy a image file\n",
+    "f = open('python.png', 'rb')\n",
+    "f1 = open('copy_python.png', 'wb')\n",
+    "f1.write(f.read())\n",
+    "f.close()\n",
+    "f1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -86,16 +164,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even(num):\n",
+    "    if num%2==0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "seq = [10,11,12,13,14,15,16,17,18,19]\n",
+    "def filterfunc(even, seq):\n",
+    "    filterseq = []\n",
+    "    for i in seq:\n",
+    "        if even(i):\n",
+    "            filterseq.append(i)\n",
+    "    return(filterseq)\n",
+    "print(filterfunc(even, seq))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
